display: flex on body crashing safari. removed. sections no longer vertically stretch :(

--- a/styles.scss
+++ b/styles.scss
@@ -18,15 +18,6 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  // expand main sections vertically if needed
-  main {
-    flex-grow: 1;
-    section {
-      flex-grow: 1;
-    }
-  }
   // Undone by JS.
   opacity: 0;
 }
@@ -61,7 +52,6 @@ body {
   font-size: 16px;
   line-height: 150%;
 }
-
 .title::before {
   content: '';
   display: block;
@@ -173,7 +163,7 @@ header {
     a.small {
       font-weight: lighter;
       color: white;
-      font-size: min(10vw, 60px);
+      // font-size: min(10vw, 60px);
       display: block;
       text-align: left;
       margin-left: 10%;
@@ -275,7 +265,7 @@ aside {
 }
 
 section#home {
-  min-height: 95vh;
+  // min-height: 95vh;
   .text-content {
     max-width: 490px;
   }
